--- a/day-9/package.json
+++ b/day-9/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "day-8",
+  "name": "day-9",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "auto": "nodemon day-8/index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "hbs": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
