--- a/day-9/package.json
+++ b/day-9/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.2.1",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
