--- a/day-12/package.json
+++ b/day-12/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day-11",
+  "name": "day-12",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.2.1",
     "hbs": "^4.2.0",
     "pg": "^8.16.3"
